rust/node-compare/tests/snapshots/snapshots__alignment_of_edited_siblings.snap
---
source: rust/node-compare/tests/snapshots.rs
expression: "align(&left, &right)?"
---
{
  "formatVersion": "1",
  "algorithm": {
    "name": "stencila-schema-native",
    "version": "1",
    "projectionVersion": "1",
    "policy": "schema-native"
  },
  "correspondences": [
    {
      "type": "paired",
      "left": {
        "path": [],
        "nodeType": "Article"
      },
      "right": {
        "path": [],
        "nodeType": "Article"
      },
      "matchInfo": {
        "rule": "root",
        "pairCost": 0,
        "leftGapCost": 7000,
        "rightGapCost": 7000,
        "evidence": [
          {
            "signal": "nodeType",
            "value": {
              "type": "boolean",
              "value": true
            },
            "contribution": 0
          }
        ]
      }
    },
    {
      "type": "paired",
      "left": {
        "path": [
          "content",
          0
        ],
        "nodeType": "Paragraph"
      },
      "right": {
        "path": [
          "content",
          1
        ],
        "nodeType": "Paragraph"
      },
      "matchInfo": {
        "rule": "verifiedExactFingerprint",
        "pairCost": 0,
        "leftGapCost": 2000,
        "rightGapCost": 2000,
        "evidence": [
          {
            "signal": "nodeType",
            "value": {
              "type": "boolean",
              "value": true
            },
            "contribution": 0
          },
          {
            "signal": "textSimilarity",
            "value": {
              "type": "number",
              "value": 1.0
            },
            "contribution": 0
          },
          {
            "signal": "scalarSignature",
            "value": {
              "type": "boolean",
              "value": true
            },
            "contribution": 0
          },
          {
            "signal": "canonicalFingerprint",
            "value": {
              "type": "string",
              "value": "0447e478bbc0f9af"
            },
            "contribution": 0
          }
        ]
      }
    },
    {
      "type": "paired",
      "left": {
        "path": [
          "content",
          0,
          "content",
          0
        ],
        "nodeType": "Text"
      },
      "right": {
        "path": [
          "content",
          1,
          "content",
          0
        ],
        "nodeType": "Text"
      },
      "matchInfo": {
        "rule": "verifiedExactFingerprint",
        "pairCost": 0,
        "leftGapCost": 1000,
        "rightGapCost": 1000,
        "evidence": [
          {
            "signal": "nodeType",
            "value": {
              "type": "boolean",
              "value": true
            },
            "contribution": 0
          },
          {
            "signal": "textSimilarity",
            "value": {
              "type": "number",
              "value": 1.0
            },
            "contribution": 0
          },
          {
            "signal": "scalarSignature",
            "value": {
              "type": "boolean",
              "value": true
            },
            "contribution": 0
          },
          {
            "signal": "canonicalFingerprint",
            "value": {
              "type": "string",
              "value": "971a05dfc200a4b2"
            },
            "contribution": 0
          }
        ]
      }
    },
    {
      "type": "paired",
      "left": {
        "path": [
          "content",
          1
        ],
        "nodeType": "Paragraph"
      },
      "right": {
        "path": [
          "content",
          0
        ],
        "nodeType": "Paragraph"
      },
      "matchInfo": {
        "rule": "verifiedExactFingerprint",
        "pairCost": 0,
        "leftGapCost": 2000,
        "rightGapCost": 2000,
        "evidence": [
          {
            "signal": "nodeType",
            "value": {
              "type": "boolean",
              "value": true
            },
            "contribution": 0
          },
          {
            "signal": "textSimilarity",
            "value": {
              "type": "number",
              "value": 1.0
            },
            "contribution": 0
          },
          {
            "signal": "scalarSignature",
            "value": {
              "type": "boolean",
              "value": true
            },
            "contribution": 0
          },
          {
            "signal": "canonicalFingerprint",
            "value": {
              "type": "string",
              "value": "56a2abb190844e8f"
            },
            "contribution": 0
          }
        ]
      }
    },
    {
      "type": "paired",
      "left": {
        "path": [
          "content",
          1,
          "content",
          0
        ],
        "nodeType": "Text"
      },
      "right": {
        "path": [
          "content",
          0,
          "content",
          0
        ],
        "nodeType": "Text"
      },
      "matchInfo": {
        "rule": "verifiedExactFingerprint",
        "pairCost": 0,
        "leftGapCost": 1000,
        "rightGapCost": 1000,
        "evidence": [
          {
            "signal": "nodeType",
            "value": {
              "type": "boolean",
              "value": true
            },
            "contribution": 0
          },
          {
            "signal": "textSimilarity",
            "value": {
              "type": "number",
              "value": 1.0
            },
            "contribution": 0
          },
          {
            "signal": "scalarSignature",
            "value": {
              "type": "boolean",
              "value": true
            },
            "contribution": 0
          },
          {
            "signal": "canonicalFingerprint",
            "value": {
              "type": "string",
              "value": "08e42c7117cf27b9"
            },
            "contribution": 0
          }
        ]
      }
    },
    {
      "type": "paired",
      "left": {
        "path": [
          "content",
          2
        ],
        "nodeType": "Paragraph"
      },
      "right": {
        "path": [
          "content",
          2
        ],
        "nodeType": "Paragraph"
      },
      "matchInfo": {
        "rule": "sequenceAlignment",
        "pairCost": 3744,
        "leftGapCost": 2000,
        "rightGapCost": 2000,
        "evidence": [
          {
            "signal": "nodeType",
            "value": {
              "type": "boolean",
              "value": true
            },
            "contribution": 0
          },
          {
            "signal": "textSimilarity",
            "value": {
              "type": "number",
              "value": 0.28
            },
            "contribution": 3744
          },
          {
            "signal": "scalarSignature",
            "value": {
              "type": "boolean",
              "value": true
            },
            "contribution": 0
          }
        ]
      }
    },
    {
      "type": "paired",
      "left": {
        "path": [
          "content",
          2,
          "content",
          0
        ],
        "nodeType": "Text"
      },
      "right": {
        "path": [
          "content",
          2,
          "content",
          0
        ],
        "nodeType": "Text"
      },
      "matchInfo": {
        "rule": "sequenceAlignment",
        "pairCost": 1872,
        "leftGapCost": 1000,
        "rightGapCost": 1000,
        "evidence": [
          {
            "signal": "nodeType",
            "value": {
              "type": "boolean",
              "value": true
            },
            "contribution": 0
          },
          {
            "signal": "textSimilarity",
            "value": {
              "type": "number",
              "value": 0.28
            },
            "contribution": 1872
          },
          {
            "signal": "scalarSignature",
            "value": {
              "type": "boolean",
              "value": true
            },
            "contribution": 0
          }
        ]
      }
    }
  ]
}
